--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Contact</title>
     </head>
+    
     <body>
-        <h1>Contact</h1>
         <p>405 University Place, Watson Hall, Syracuse University,  Syracuse, New York, 13244</p>
         <p>My mail link: <a href="mailto:rsskier@syr.edu">Rebecca Skier Email</a></p>
         <a href="https://www.linkedin.com/in/rebeccaskier" target="_blank">My LinkedIn Profile</a> <img src="../images/linkedinblue.svg" alt="linkedin logo"> 
