--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -7,7 +7,9 @@
     </head>
     
     <body>
-        <p>405 University Place, Watson Hall, Syracuse University,  Syracuse, New York, 13244</p>
+        <p>405 University Place, Watson Hall, <br>
+            Syracuse University, <br> 
+            Syracuse, New York, 13244</p>
         <p>My mail link: <a href="mailto:rsskier@syr.edu">Rebecca Skier Email</a></p>
         <a href="https://www.linkedin.com/in/rebeccaskier" target="_blank">My LinkedIn Profile</a> <img src="../images/logo_sized.png" alt="linkedin logo"> 
 
