--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -37,15 +37,15 @@
             Adobe<br>Photoshop<br>
         </div>
         <div>
-            <img src="../../fileimages/xdicon.svg" alt="Illustrator" height="100px" width="95px"><br>
+            <img src="../../fileimages/xdicon.svg" alt="xd" height="100px" width="95px"><br>
             Adobe Xd<br>
         </div>
         <div>
-            <img src="../../fileimages/htmlicon.svg" alt="Illustrator" height="100px" width="95px"><br>
+            <img src="../../fileimages/htmlicon.svg" alt="html" height="100px" width="95px"><br>
             HTML<br>
         </div>
         <div> 
-            <img src="../../fileimages/cssicon.svg" alt="Illustrator" height="100px" width="95px"><br>
+            <img src="../../fileimages/cssicon.png" alt="css" height="100px" width="95px"><br>
             CSS
         </div>
     </div>
