--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -29,23 +29,23 @@
 <div class="skills">
     <div class="icons">
         <div>
-            <img src="../../fileimages/illustratoricon.svg" alt="illustrator" height="100px" width="95px"><br>
+            <img src="../images/illustratoricon.png" alt="illustrator" height="100px" width="95px"><br>
             Adobe<br>Illustrator<br>
         </div>
         <div>
-            <img src="../../fileimages/photoshopicon.svg" alt="photoshop" height="100px" width="95px"><br>
+            <img src="../images/photoshopicon.png" alt="photoshop" height="100px" width="95px"><br>
             Adobe<br>Photoshop<br>
         </div>
         <div>
-            <img src="../../fileimages/xdicon.svg" alt="xd" height="100px" width="95px"><br>
+            <img src="../images/xdicon.png" alt="xd" height="100px" width="95px"><br>
             Adobe Xd<br>
         </div>
         <div>
-            <img src="../../fileimages/htmlicon.svg" alt="html" height="100px" width="95px"><br>
+            <img src="../images/htmlicon.png" alt="html" height="100px" width="95px"><br>
             HTML<br>
         </div>
         <div> 
-            <img src="../../fileimages/cssicon.png" alt="css" height="100px" width="95px"><br>
+            <img src="../images/cssicon.png" alt="css" height="100px" width="95px"><br>
             CSS
         </div>
     </div>
