--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -29,7 +29,7 @@
 <div class="skills">
     <div class="icons">
         <div>
-            <img src="../images/illustratoricon.png" alt="illustrator" height="100p" width="95"><br>
+            <img src="../images/illustratoricon.png" alt="illustrator" height="100" width="95"><br>
             Adobe<br>Illustrator<br>
         </div>
         <div>
