--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -30,7 +30,7 @@
         </div>
     </header>  
 
-<img src="../fileimages/rskier_banner.jpg" alt="banner">
+<img src="portfolio_content/rskier_banner.jpg" alt="banner">
 <hr>
 <h1>About Rebecca</h1>
 <hr>
