--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -118,7 +118,7 @@
         <!--icons will centered under copyright-->
         <div class="icons">
             <div class="email">
-               <a href="mailto:rsskier@syr.edu"><img src="portfolio_content/mail.png" alt="email icon"></a>
+               <a href="mailto:rsskier@syr.edu"><img src="portfolio_content/mail.png" alt="Email icon"></a>
             </div>
             <div class="linkedin">
                 <a href=https://www.linkedin.com/in/rebeccaskier><img src="portfolio_content/linkedin.png" alt="LinkedIn icon"></a>
