--- a/lab11/index.html
+++ b/lab11/index.html
@@ -11,10 +11,10 @@
 
     <body>
         <nav>
-            <a href="#content" tabindex="1" class="skip">Skip to Content</a>
-            <a href="index.html" tabindex="2">Home</a> 
-            <a href="skills.html" tabindex="3">Skills</a> 
-            <a href="contact.html" tabindex="4">Contact</a>
+            <a href="#content" class="skip">Skip to Content</a>
+            <a href="index.html" >Home</a>
+            <a href="skills.html">Skills</a> 
+            <a href="contact.html">Contact</a> 
         </nav>
         <img class="banner" src="../images/rskier_banner.jpg" alt="banner Rebecca Skier Graphic Designer">
  
