--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <nav>
-        <a href="#content" tabindex="1" class="skip">Skip to Content</a>
-        <a href="index.html" tabindex="2">Home</a>
-        <a href="skills.html" tabindex="3">Skills</a>
-        <a href="contact.html" tabindex="4">Contact</a>
+        <a href="#content" class="skip">Skip to Content</a>
+        <a href="index.html" >Home</a>
+        <a href="skills.html">Skills</a> 
+        <a href="contact.html">Contact</a> 
     </nav>
 
     <section>
