--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -39,11 +39,11 @@
             Adobe Xd<br>
         </div>
         <div>
-            <img src="../images/htmlicon.png" alt="html" height="100" width="95"><br>
+            <img src="../images/htmlicon.png" alt="html icon" height="100" width="95"><br>
             HTML<br>
         </div>
         <div> 
-            <img src="../images/cssicon.png" alt="css" height="100" width="95"><br>
+            <img src="../images/cssicon.png" alt="css icon" height="100" width="95"><br>
             CSS
         </div>
     </div>
