--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -40,6 +40,7 @@
                    
                     <label for="comments">Questions, comments or concerns:</label>
                     <textarea id="comments" name="comments"></textarea><br>
+                    <fieldset>
                     <legend>Grade</legend>
                     <label for="freshman">Freshman</label>
                     <input type="radio" id="freshman" name="year" value="freshman">
@@ -49,8 +50,8 @@
                     <input type="radio" id="junior" name="year" value="junior">
                     <label for="senior">Senior</label>
                     <input type="radio" id="senior" name="year" value="senior"><br>
-    
                     <input type="submit" value="Submit">
+                </fieldset>
                 </form>
                 </div>
 
