--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -25,7 +25,7 @@
          </div>
         <!--My logo-->
         <div class="rebeccalogo">
-            <img src="portfolio_content/logo3.png" alt="Rebecca Skier">
+            <img src="" alt="Rebecca Skier">
         </div>
     </div>
     </header>  
