--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,14 +15,14 @@
             </div>
             <div class="right">
                 <nav>
-                    <a href="portfolio.html">PORTFOLIO |</a>
-                    <a href="about.html">ABOUT |</a>
-                    <a href="contact.html">CONTACT </a>
+                    <a href="index.html">Portfolio </a>
+                    <a href="about.html">About </a>
+                    <a href="contact.html">Contact </a>
                 </nav>
             </div>
         </div>
         <!--My logo-->
-        <img class="logo" src="../portfolio_content/headerlogo.png" alt="Rebecca Skier">
+        <img class="logo" src="../portfolio/portfolio_content/headerlogo.png" alt="Rebecca Skier" width="300px">
     </header>
     <main>
         <div class="row1">
@@ -86,5 +86,15 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="copywrite">
+            &copy; Rebecca Skier 2022 all rights reserved
+        </div>
+        <div class="icons">
+            <a href=https://www.instagram.com/skier.designs><img src="portfolio_content/instagram.png" alt="instagram logo" width="40em"></a>
+            <a href=https://www.linkedin.com/in/rebeccaskier><img src="portfolio_content/linkedin.png" alt="linkedin logo" width="40em"></a>
+            <a href="mailto:rsskier@syr.edu"><img src="portfolio_content/mail.png" alt="email icon" width="40em"></a>
+        </div> 
+    </footer>
 </body>
 </html>
