--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="content/work-14.png">
+    <style>
+        .active {color:#E8E1D9;}
+    </style>
 </head>
 <body>
     <header>
         <div class="parent">
             <div class="left">
-                <strong>Graphic & UX/UI Design</strong>
+                Graphic & UX/UI Design
             </div>
             <div class="right">
                 <nav>
-                    <a href="index.html">Portfolio </a>
+                    <a class=active href="portfolio.html">Portfolio </a>
                     <a href="about.html">About </a>
                     <a href="contact.html">Contact </a>
                 </nav>
@@ -27,38 +31,83 @@
     <main>
         <div class="row1">
             <div class="left1">
-                <img class="jennette" src="content/content-01.png" width="300px">
-                <img class="jennette" src="content/content-02.png" width="300px">
+                <img class="jennette" src="content/content-01.png" width="300px" alt="Jennette McCurdy Poster">
+                <img class="jennette" src="content/content-02.png" width="300px" alt="Jennette McCurdy Poster">
             </div>
             <div class="right1">
-                <img class="row1f" src="content/content-03.png" width="300px">
+                <img class="row1f" src="content/content-03.png" width="300px" alt="Fries with the Chi's Logo">
             </div>
         </div>
         <div class="row2">
-            <img src="content/content-04.png" width="300px">
-            <img src="content/content-05.png" width="300px">
-            <img src="content/content-06.png" width="300px">
+            <img src="content/content-04.png " width="300px" alt="Alpha Chi Omega Frisbee logo">
+            <img src="content/content-05.png" width="300px" alt="Alpha Chi Omega Frisbee logo">
+            <img src="content/content-06.png" width="300px" alt="Alpha Chi Omega Frisbee logo">
         </div>
         <div class="row3">
             <div class="left3">
-                <img src="content/content-07.png" width="300px">
-                <img src="content/content-08.png" width="300px">
+                <img src="content/content-07.png" width="300px" alt="Alpha Chi Omega date night logo">
+                <img src="content/content-08.png" width="300px" alt="Alpha Chi Omega date night logo">>
             </div>
             <div class="right3">
-                <img src="content/content-09.png" width="300px">
-                <img src="content/content-10.png" width="300px">
+                <img src="content/content-09.png" width="300px" alt="Bandersnatch poster">
+                <img src="content/content-10.png" width="300px" alt="Bandersnatch poster">
             </div>
         </div>
         <div class="row4">
             <div class="left4">
-                <img src="content/content-11.png" width="300px">
-                <img src="content/content-12.png" width="300px">
+                <img src="content/content-11.png" width="300px" alt="Juice Jam Poster">
+                <img src="content/content-12.png" width="300px" alt="Juice Jam Poster">
             </div>
+            <div class="left4">
+                <img src="content/content-13.png" width="300px" alt="Juice Jam Poster">
+                <img src="content/content-14.png" width="300px" alt="Juice Jam Poster">
+            </div>
+        </div>
+        <div class="row5">
             <div class="left5">
-                <img src="content/content-13.png" width="300px">
-                <img src="content/content-14.png" width="300px">
+                <img src="content/work-01.png" width="300px" alt="Please Don't Destroy poster">
+            </div>
+            <div class="right5">
+                <img src="content/work-02.png" width="300px" alt="Alpha Chi Omega PR logo">
+                <img src="content/work-03.png" width="300px" alt="Alpha Chi Omega PR logo">
+            </div>
+        </div>
+        <div class="row6">
+            <img src="content/work-04.png" width="300px" alt="These Hands Donut Haze logo">
+            <img src="content/work-05.png" width="300px" alt="These Hands Donut Haze logo">
+            <img src="content/work-06.png" width="300px" alt="These Hands Donut Haze logo">
+        </div>
+        <div class="row7">
+            <div class="left7">
+                <img src="content/work-07.png" width="300px" alt="Northern Highlands Swim Team logo">
+            </div>
+            <div class="right7">
+                <img src="content/work-11.png" width="300px" alt="Pascack Swimming logo">
+            </div>
+        </div>
+        <div class="row8">
+            <img src="content/work-08.png" width="300px" alt="Juice Jam Poster">
+            <img src="content/work-09.png" width="300px" alt="May Fest Poster">
+            <img src="content/work-10.png" width="300px" alt="Block Party Poster">
+        </div>
+        <div class="row9">
+            <div class="left9">
+                <img src="content/work-12.png" width="300px" alt="Bandersnatch Poster">
+            </div>
+            <div class="right9">
+                <img src="content/work-13.png" width="300px" alt="Nike ad">
             </div>
         </div>
     </main>
+    <footer>
+        <div class="copywrite">
+            &copy; Rebecca Skier 2022 all rights reserved
+        </div>
+        <div class="icons">
+            <a href=https://www.instagram.com/skier.designs><img src="../portfolio_content/instagram.png" alt="instagram logo" width="40em"></a>
+            <a href=https://www.linkedin.com/in/rebeccaskier><img src="../portfolio_content/linkedin.png" alt="linkedin logo" width="40em"></a>
+            <a href="mailto:rsskier@syr.edu"><img src="../portfolio_content/mail.png" alt="email icon" width="40em"></a>
+        </div> 
+    </footer>
 </body>
 </html>
