--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="content/work-14.png">
     <style>
-        .active {color:#E8E1D9;}
+        .active {color:#EA5292}
     </style>
 </head>
 <body>
