--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="content/work-14.png">
     <style>
-        .active {color:#EA5292}
+        .active {color:#7b7b7b}
     </style>
 </head>
 <body>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <!--My logo-->
-        <img class="logo" src="../portfolio_content/headerlogo.png" alt="Rebecca Skier" width="300px">
+        <h1><img class="logo" src="../portfolio_content/headerlogo.png" alt="Rebecca Skier" width="300px"></h1>
     </header>
     <main>
         <div class="row1">
@@ -39,28 +39,28 @@
             </div>
         </div>
         <div class="row2">
-            <img src="content/content-04.png " width="300px" alt="Alpha Chi Omega Frisbee logo">
-            <img src="content/content-05.png" width="300px" alt="Alpha Chi Omega Frisbee logo">
-            <img src="content/content-06.png" width="300px" alt="Alpha Chi Omega Frisbee logo">
+            <img src="content/content-04.png " width="300px" alt="Alpha Chi Omega Frisbee logo front">
+            <img src="content/content-05.png" width="300px" alt="Alpha Chi Omega Frisbee logo back">
+            <img src="content/content-06.png" width="300px" alt="Alpha Chi Omega Frisbee logo baby tee">
         </div>
         <div class="row3">
             <div class="left3">
-                <img src="content/content-07.png" width="300px" alt="Alpha Chi Omega date night logo">
-                <img src="content/content-08.png" width="300px" alt="Alpha Chi Omega date night logo">>
+                <img src="content/content-07.png" width="300px" alt="Alpha Chi Omega date night logo front">
+                <img src="content/content-08.png" width="300px" alt="Alpha Chi Omega date night logo back">
             </div>
             <div class="right3">
-                <img src="content/content-09.png" width="300px" alt="Bandersnatch poster">
-                <img src="content/content-10.png" width="300px" alt="Bandersnatch poster">
+                <img src="content/content-09.png" width="300px" alt="Bandersnatch poster 1">
+                <img src="content/content-10.png" width="300px" alt="Bandersnatch poster 2">
             </div>
         </div>
         <div class="row4">
             <div class="left4">
-                <img src="content/content-11.png" width="300px" alt="Juice Jam Poster">
-                <img src="content/content-12.png" width="300px" alt="Juice Jam Poster">
+                <img src="content/content-11.png" width="300px" alt="Juice Jam Poster 1">
+                <img src="content/content-12.png" width="300px" alt="Juice Jam Poster 2">
             </div>
             <div class="left4">
-                <img src="content/content-13.png" width="300px" alt="Juice Jam Poster">
-                <img src="content/content-14.png" width="300px" alt="Juice Jam Poster">
+                <img src="content/content-13.png" width="300px" alt="Juice Jam Poster 3">
+                <img src="content/content-14.png" width="300px" alt="Juice Jam Poster 4">
             </div>
         </div>
         <div class="row5">
@@ -68,14 +68,14 @@
                 <img src="content/work-01.png" width="300px" alt="Please Don't Destroy poster">
             </div>
             <div class="right5">
-                <img src="content/work-02.png" width="300px" alt="Alpha Chi Omega PR logo">
-                <img src="content/work-03.png" width="300px" alt="Alpha Chi Omega PR logo">
+                <img src="content/work-02.png" width="300px" alt="Alpha Chi Omega PR logo back">
+                <img src="content/work-03.png" width="300px" alt="Alpha Chi Omega PR logo front">
             </div>
         </div>
         <div class="row6">
-            <img src="content/work-04.png" width="300px" alt="These Hands Donut Haze logo">
-            <img src="content/work-05.png" width="300px" alt="These Hands Donut Haze logo">
-            <img src="content/work-06.png" width="300px" alt="These Hands Donut Haze logo">
+            <img src="content/work-04.png" width="300px" alt="These Hands Donut Haze logo hat">
+            <img src="content/work-05.png" width="300px" alt="These Hands Donut Haze logo back">
+            <img src="content/work-06.png" width="300px" alt="These Hands Donut Haze logo front">
         </div>
         <div class="row7">
             <div class="left7">
@@ -86,13 +86,13 @@
             </div>
         </div>
         <div class="row8">
-            <img src="content/work-08.png" width="300px" alt="Juice Jam Poster">
+            <img src="content/work-08.png" width="300px" alt="Juice Jam Poster 5">
             <img src="content/work-09.png" width="300px" alt="May Fest Poster">
             <img src="content/work-10.png" width="300px" alt="Block Party Poster">
         </div>
         <div class="row9">
             <div class="left9">
-                <img src="content/work-12.png" width="300px" alt="Bandersnatch Poster">
+                <img src="content/work-12.png" width="300px" alt="Bandersnatch Poster 3">
             </div>
             <div class="right9">
                 <img src="content/work-13.png" width="300px" alt="Nike ad">
