--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="content/work-14.png">
     <style>
-        .active {color:#7b7b7b}
+        .active {color:#313131}
     </style>
 </head>
 <body>
@@ -31,8 +31,8 @@
     <main>
         <div class="row1">
             <div class="left1">
-                <img class="jennette" src="content/content-01.png" width="300px" alt="Jennette McCurdy Poster">
-                <img class="jennette" src="content/content-02.png" width="300px" alt="Jennette McCurdy Poster">
+                <img class="jennette" src="content/content-01.png" width="300px" alt="Jennette McCurdy Poster 1">
+                <img class="jennette" src="content/content-02.png" width="300px" alt="Jennette McCurdy Poster 2">
             </div>
             <div class="right1">
                 <img class="row1f" src="content/content-03.png" width="300px" alt="Fries with the Chi's Logo">
