--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -26,76 +26,76 @@
             </div>
         </div>
         <!--My logo-->
-        <h1><img class="logo" src="../portfolio_content/headerlogo.png" alt="Rebecca Skier" width="300px"></h1>
+        <h1><img class="logo" src="../portfolio_content/headerlogo.png" alt="Rebecca Skier" width="300"></h1>
     </header>
     <main>
         <div class="row1">
             <div class="left1">
-                <img class="jennette" src="content/content-01.png" width="300px" alt="Jennette McCurdy Poster 1">
-                <img class="jennette" src="content/content-02.png" width="300px" alt="Jennette McCurdy Poster 2">
+                <img class="jennette" src="content/content-01.png" width="300" alt="Jennette McCurdy Poster 1">
+                <img class="jennette" src="content/content-02.png" width="300" alt="Jennette McCurdy Poster 2">
             </div>
             <div class="right1">
-                <img class="row1f" src="content/content-03.png" width="300px" alt="Fries with the Chi's Logo">
+                <img class="row1f" src="content/content-03.png" width="300" alt="Fries with the Chi's Logo">
             </div>
         </div>
         <div class="row2">
-            <img src="content/content-04.png " width="300px" alt="Alpha Chi Omega Frisbee logo front">
-            <img src="content/content-05.png" width="300px" alt="Alpha Chi Omega Frisbee logo back">
-            <img src="content/content-06.png" width="300px" alt="Alpha Chi Omega Frisbee logo baby tee">
+            <img src="content/content-04.png " width="300" alt="Alpha Chi Omega Frisbee logo front">
+            <img src="content/content-05.png" width="300" alt="Alpha Chi Omega Frisbee logo back">
+            <img src="content/content-06.png" width="300" alt="Alpha Chi Omega Frisbee logo baby tee">
         </div>
         <div class="row3">
             <div class="left3">
-                <img src="content/content-07.png" width="300px" alt="Alpha Chi Omega date night logo front">
-                <img src="content/content-08.png" width="300px" alt="Alpha Chi Omega date night logo back">
+                <img src="content/content-07.png" width="300" alt="Alpha Chi Omega date night logo front">
+                <img src="content/content-08.png" width="300" alt="Alpha Chi Omega date night logo back">
             </div>
             <div class="right3">
-                <img src="content/content-09.png" width="300px" alt="Bandersnatch poster 1">
-                <img src="content/content-10.png" width="300px" alt="Bandersnatch poster 2">
+                <img src="content/content-09.png" width="300" alt="Bandersnatch poster 1">
+                <img src="content/content-10.png" width="300" alt="Bandersnatch poster 2">
             </div>
         </div>
         <div class="row4">
             <div class="left4">
-                <img src="content/content-11.png" width="300px" alt="Juice Jam Poster 1">
-                <img src="content/content-12.png" width="300px" alt="Juice Jam Poster 2">
+                <img src="content/content-11.png" width="300" alt="Juice Jam Poster 1">
+                <img src="content/content-12.png" width="300" alt="Juice Jam Poster 2">
             </div>
             <div class="left4">
-                <img src="content/content-13.png" width="300px" alt="Juice Jam Poster 3">
-                <img src="content/content-14.png" width="300px" alt="Juice Jam Poster 4">
+                <img src="content/content-13.png" width="300" alt="Juice Jam Poster 3">
+                <img src="content/content-14.png" width="300" alt="Juice Jam Poster 4">
             </div>
         </div>
         <div class="row5">
             <div class="left5">
-                <img src="content/work-01.png" width="300px" alt="Please Don't Destroy poster">
+                <img src="content/work-01.png" width="300" alt="Please Don't Destroy poster">
             </div>
             <div class="right5">
-                <img src="content/work-02.png" width="300px" alt="Alpha Chi Omega PR logo back">
-                <img src="content/work-03.png" width="300px" alt="Alpha Chi Omega PR logo front">
+                <img src="content/work-02.png" width="300" alt="Alpha Chi Omega PR logo back">
+                <img src="content/work-03.png" width="300" alt="Alpha Chi Omega PR logo front">
             </div>
         </div>
         <div class="row6">
-            <img src="content/work-04.png" width="300px" alt="These Hands Donut Haze logo hat">
-            <img src="content/work-05.png" width="300px" alt="These Hands Donut Haze logo back">
-            <img src="content/work-06.png" width="300px" alt="These Hands Donut Haze logo front">
+            <img src="content/work-04.png" width="300" alt="These Hands Donut Haze logo hat">
+            <img src="content/work-05.png" width="300" alt="These Hands Donut Haze logo back">
+            <img src="content/work-06.png" width="300" alt="These Hands Donut Haze logo front">
         </div>
         <div class="row7">
             <div class="left7">
-                <img src="content/work-07.png" width="300px" alt="Northern Highlands Swim Team logo">
+                <img src="content/work-07.png" width="300" alt="Northern Highlands Swim Team logo">
             </div>
             <div class="right7">
-                <img src="content/work-11.png" width="300px" alt="Pascack Swimming logo">
+                <img src="content/work-11.png" width="300" alt="Pascack Swimming logo">
             </div>
         </div>
         <div class="row8">
-            <img src="content/work-08.png" width="300px" alt="Juice Jam Poster 5">
-            <img src="content/work-09.png" width="300px" alt="May Fest Poster">
-            <img src="content/work-10.png" width="300px" alt="Block Party Poster">
+            <img src="content/work-08.png" width="300" alt="Juice Jam Poster 5">
+            <img src="content/work-09.png" width="300" alt="May Fest Poster">
+            <img src="content/work-10.png" width="300" alt="Block Party Poster">
         </div>
         <div class="row9">
             <div class="left9">
-                <img src="content/work-12.png" width="300px" alt="Bandersnatch Poster 3">
+                <img src="content/work-12.png" width="300" alt="Bandersnatch Poster 3">
             </div>
             <div class="right9">
-                <img src="content/work-13.png" width="300px" alt="Nike ad">
+                <img src="content/work-13.png" width="300" alt="Nike ad">
             </div>
         </div>
     </main>
