--- a/portfolio/final/portfolio.html
+++ b/portfolio/final/portfolio.html
@@ -104,9 +104,9 @@
             &copy; Rebecca Skier 2022 all rights reserved
         </div>
         <div class="icons">
-            <a href=https://www.instagram.com/skier.designs><img src="../portfolio_content/instagram.png" alt="instagram logo" width="40em"></a>
-            <a href=https://www.linkedin.com/in/rebeccaskier><img src="../portfolio_content/linkedin.png" alt="linkedin logo" width="40em"></a>
-            <a href="mailto:rsskier@syr.edu"><img src="../portfolio_content/mail.png" alt="email icon" width="40em"></a>
+            <a href=https://www.instagram.com/skier.designs><img src="../portfolio_content/instagram.png" alt="instagram logo" width="40"></a>
+            <a href=https://www.linkedin.com/in/rebeccaskier><img src="../portfolio_content/linkedin.png" alt="linkedin logo" width="40"></a>
+            <a href="mailto:rsskier@syr.edu"><img src="../portfolio_content/mail.png" alt="email icon" width="40"></a>
         </div> 
     </footer>
 </body>
