--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -18,10 +18,10 @@
                 Graphic & UX/UI Design
             </div>
             <div class="right">
-                <nav>
-                    <a class=active href="portfolio.html">Portfolio </a>
-                    <a href="about.html">About </a>
-                    <a href="contact.html" class="active">Contact </a>
+                <nav id="nav">
+                    <a id=navLink1 class=active href="portfolio.html">Portfolio </a>
+                    <a id=navLink2 href="contact.html">About </a>
+                    <a id=navLink3 href="contact.html#contactpage">Contact </a>
                 </nav>
             </div>
         </div>
@@ -31,59 +31,90 @@
    
     <main>
     <div class="aboutbody">
-        <div>
-            <img id=b1 src="content/bannersplit-02.png" alt="Rebecca Skier">
+        <div class="aboutop">
             <div class="banner">
-                <img id=b2 src="content/bannersplit-03.png" alt="Rebecca Skier">
-                <p>
-                    <p><strong class="intro">Hi, I'm Rebecca.</strong><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos nihil minima blanditiis molestias dicta dolorem sit, ab vero dolorum suscipit nulla labore animi ducimus nemo pariatur similique ipsa, doloremque officia!</p>
+                 <img id=b4 src="content/banner2-02.png">
+                    <p class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>My name is Rebecca Skier and I'm a 3rd generation Syracuse University student. I'm passionate about design and experienced working with Adobe softwares, specifically Illustrator. I am always looking for new challenges and oppurtunities to put my skills to use.<br><br><br><span class="resumebutton">View Resume</span></p>
             </div>
-            <img id=b3 src="content/bannersplit-04.png" alt="Rebecca Skier">
-            <p>
-            </p>
-        </div>
+            <div class="pink">
+            <img id="b5" src="content/banner2-03.png">
+            </div>
+            <div class="aboutflexparent">
+                <div class="aboutflex">
+                    <div class="af1">
+                        <strong>Syracuse <br>University</strong><br><br><span class=year>2021-2025</span><br>3.9 Cumilative GPA<br><br><span id="syr" class="lm">Learn More</span>
+                    </div>
+                    <div class="af2">
+                        <strong>Newhouse School <br>of Public Communications</strong><br><br><span class=year>2021-2025</span><br>Graphic Design (B.S.)<br><br><span id="nh" class="lm">Learn More</span>
+                    </div> 
+                    <div class="af3">
+                        <strong>Information <br>School</strong><br><br><span class=year>2021-2025</span><br>Web Design Management (B.S.)<br><br><span id="is" class="lm">Learn More</span>
+                    </div>
+                </div>
+            </div>
+
     </div>
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1082723537334!2d-76.13729912017938!3d43.03915337924927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1669660951529!5m2!1sen!2sus" width="3000" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" id="contactpage" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1082723537334!2d-76.13729912017938!3d43.03915337924927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1669660951529!5m2!1sen!2sus" width="3000" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="contactbody">
         <div class="contact">
-            
             <div class="form">
             <form method="post" action="https://formspree.io/f/xgeqkvgo">
                 <div class="heading">
                     <h1>Let's Talk.</h1>
-                </div>
-                <div class="top">
-                    <div class="name">
-                        <label for="name"><strong>Full Name</strong></label><br>
-                        <input type="text" id="name" name="firstname"><br>
-                    </div>
-                    <div class="email">
-                        <label for="email"><strong>Email Address</strong></label><br>
-                        <input type="text" id="email" name="email"><br>
-                    </div>
-                </div>
-                <div class="bottom">
-                    <div class="phone">
-                        <label for="phone"><strong>Phone Number</strong></label><br>
-                        <input type="text" id="phone" name="phone"><br>
-                    </div>
-                    <div class="reason">
-                            <label for="reason"><strong>Reason For Contact</strong></label><br>
-                            <select id="reason" name="reason">
-                            <option></option>
-                            <option value="jobinquiry">Job inquiry</option>
-                            <option value="question">Question</option>
-                            <option value="comment">Comment</option>
-                            <option value="other">Other</option>
-                        </select>
+                    <div class="infosmaller">
+                            <div class="reachme">
+                                <h2>My Contact:</h2>
+                            </div>
+                            <div class=infobox>
+                                <strong>Email: </strong> Rsskier@syr.edu<br>
+                            </div>
+                            <div class=infobox>
+                                <strong>Phone: </strong>201-696-6619<br>
+                            </div>
+                            <div class="infobox">
+                                <strong>Address: </strong>20 Briarcliff Road, New Jersey, 07458
+                            </div>
                     </div>
                 </div>
-                <div class="message">
-                    <label for="message"><strong>Message</strong></label><br>
-                    <textarea id="message" name="message"></textarea><br>
-                </div>
-                <div class="submit">
-                    <input type="submit" value="&rarr; Submit" class="send">
+                <div class="normalform">
+                    <div class="formtitle">
+                        <h2>Contact Form:</h2>
+                    </div>
+                    <div class="formbody">
+                    <div class="top">
+                        <div class="name">
+                            <label for="name"><strong>Full Name</strong></label><br>
+                            <input type="text" id="name" name="firstname"><br>
+                        </div>
+                        <div class="email">
+                            <label for="email"><strong>Email Address</strong></label><br>
+                            <input type="text" id="email" name="email"><br>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        <div class="phone">
+                            <label for="phone"><strong>Phone Number</strong></label><br>
+                            <input type="text" id="phone" name="phone"><br>
+                        </div>
+                        <div class="reason">
+                                <label for="reason"><strong>Reason For Contact</strong></label><br>
+                                <select id="reason" name="reason">
+                                <option></option>
+                                <option value="jobinquiry">Job inquiry</option>
+                                <option value="question">Question</option>
+                                <option value="comment">Comment</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="message">
+                        <label for="message"><strong>Message</strong></label><br>
+                        <textarea id="message" name="message"></textarea><br>
+                    </div>
+                    <div class="submit">
+                        <input type="submit" value="&rarr; Submit" class="send">
+                    </div>
+                    </div>
                 </div>
             </div>
             <div class="myinfo">
