--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -50,11 +50,12 @@
     <div class="aboutbody">
         <div class="aboutop">
             <div class="banner">
-                 <img id=b4 src="content/banner2-02.png">
-                    <p class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>My name is Rebecca Skier and I'm a 3rd generation Syracuse University student. I'm passionate about design and experienced working with Adobe softwares, specifically Illustrator. I am always looking for new challenges and oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></p>
+                 <img id=b4 src="content/banner2-02.png" alt="Rebecca Skier (top)">
+                    <div class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>
+                        <pre>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></pre></div>
             </div>
             <div class="pink">
-            <img id="b5" src="content/banner2-03.png">
+            <img id="b5" src="content/banner2-03.png" alt="Rebecca Skier (bottom)">
             </div>
             <div class="aboutflexparent">
                 <div class="aboutflex">
