--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -35,7 +35,7 @@
                 <div id="close" onclick="HamburgerClose();">X</div>
                 <div>
                     <nav id="nav">
-                        <a id=navLink1 class=active href="portfolio.html">Portfolio </a>
+                        <a id=navLink1 class=active href="index.html">Portfolio </a>
                         <a id=navLink2 href="contact.html">About </a>
                         <a id=navLink3 href="contact.html#contactpage">Contact </a>
                     </nav>
