--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -35,9 +35,9 @@
                 <div id="close" onclick="HamburgerClose();">X</div>
                 <div>
                     <nav id="nav">
-                        <a id=navLink1 class=active href="index.html">Portfolio </a>
-                        <a id=navLink2 href="contact.html">About </a>
-                        <a id=navLink3 href="contact.html#contactpage">Contact </a>
+                        <a id=navLink1 class=active href="index.html" tabindex="1">Portfolio </a>
+                        <a id=navLink2 href="contact.html" tabindex=2>About </a>
+                        <a id=navLink3 href="contact.html#contactpage" tabindex=3>Contact </a>
                     </nav>
                 </div>
             </div>
