--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -48,28 +48,35 @@
    
     <main>
     <div class="aboutbody">
-        <div class="aboutop">
-            <div class="banner">
-                 <img id=b4 src="content/banner2-02.png" alt="Rebecca Skier (top)">
-                    <div class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>
-                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre></div>
+        <div class="tanparentflex">
+            <div class="aboutop">
+                <div class="banner">
+                    <img id=b4 src="content/banner2-02.png" alt="Rebecca Skier (top)">
+                        <div class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>
+                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre>
+                        </div>
+                </div>
             </div>
+        </div>
+        <div class="pinkparentflex">
             <div class="pink">
             <img id="b5" src="content/banner2-03.png" alt="Rebecca Skier (bottom)">
             </div>
+        </div>
+            
             <div class="aboutflexparent">
                 <div class="aboutflex">
                     <div class="mobileparagraph">
-                        <p><strong class="intro">Hi, I'm Rebecca.</strong><br><br>My name is Rebecca Skier and I'm a 3rd generation Syracuse University student. I'm passionate about design and experienced working with Adobe softwares, specifically Illustrator. I am always looking for new challenges and oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></p>
+                        <p><strong class="intro">Hi, I'm Rebecca.</strong><br><br>My name is Rebecca Skier and I'm a 3rd generation Syracuse University student. I'm passionate about design and experienced working with Adobe softwares, specifically Illustrator. I am always looking for new challenges and oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_blank">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></p>
                     </div>
                     <div class="af1">
-                        <strong>Syracuse <br>University</strong><br><br><span class=year>2021-2025</span><br>3.9 Cumulative GPA<br><br><a href="https://www.syracuse.edu/about/" id="syr" class="lm" target="_">Learn More</a>
+                        <strong>Syracuse <br>University</strong><br><br><span class=year>2021-2025</span><br>3.9 Cumulative GPA<br><br><a href="https://www.syracuse.edu/about/" id="syr" class="lm" target="_blank">Learn More</a>
                     </div>
                     <div class="af2">
-                        <strong>Newhouse School <br>of Public Communications</strong><br><br><span class=year>2021-2025</span><br>Graphic Design (B.S.)<br><br><a href="https://newhouse.syr.edu/academics/graphic-design/" id="nh" class="lm" target="_">Learn More</a>
+                        <strong>Newhouse School <br>of Public Communications</strong><br><br><span class=year>2021-2025</span><br>Graphic Design (B.S.)<br><br><a href="https://newhouse.syr.edu/academics/graphic-design/" id="nh" class="lm" target="_blank">Learn More</a>
                     </div> 
                     <div class="af3">
-                        <strong>Information <br>School</strong><br><br><span class=year>2021-2025</span><br>Web Design Management (B.S.)<br><br><a href="https://ischool.syr.edu/academics/information-management-and-technology-bachelors-degree/" id="is" class="lm" target="_">Learn More</a>
+                        <strong>Information <br>School</strong><br><br><span class=year>2021-2025</span><br>Web Design Management (B.S.)<br><br><a href="https://ischool.syr.edu/academics/information-management-and-technology-bachelors-degree/" id="is" class="lm" target="_blank">Learn More</a>
                     </div>
                 </div>
 
@@ -142,13 +149,14 @@
             </div>
         </div>
     </div>
+    </div>
 
     </div>
     <iframe class="map" id="contactpage" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1082723537334!2d-76.13729912017938!3d43.03915337924927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1669660951529!5m2!1sen!2sus" width="3000" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="contactbody">
         <div class="contact">
             <div class="form">
-            <form method="post" action="https://formspree.io/f/xgeqkvgo">
+                <form method="post" action="https://formspree.io/f/xgeqkvgo">
                 <div class="heading">
                     <h1>Let's Talk.</h1>
                     <div class="infosmaller">
@@ -189,7 +197,7 @@
                         <div class="reason">
                                 <label for="reason"><strong>Reason For Contact</strong></label><br>
                                 <select id="reason" name="reason">
-                                <option></option>
+                                <option>Select reason</option>
                                 <option value="jobinquiry">Job inquiry</option>
                                 <option value="question">Question</option>
                                 <option value="comment">Comment</option>
@@ -205,6 +213,8 @@
                         <input type="submit" value="&rarr; Submit" class="send">
                     </div>
                     </div>
+                    </div>
+                    </form>
                 </div>
             </div>
             <div class="myinfo">
