--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -53,7 +53,7 @@
                 <div class="banner">
                     <img id=b4 src="content/banner2-02.png" alt="Rebecca Skier (top)">
                         <div class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>
-                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre>
+                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_blank">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre>
                         </div>
                 </div>
             </div>
@@ -151,7 +151,6 @@
     </div>
     </div>
 
-    </div>
     <iframe class="map" id="contactpage" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1082723537334!2d-76.13729912017938!3d43.03915337924927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1669660951529!5m2!1sen!2sus" width="3000" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="contactbody">
         <div class="contact">
@@ -226,7 +225,6 @@
                 <p>20 Briarcliff Road,<br> New Jersey, 07458</p>
             </div>
         </div>
-    </div>
     </main>
     <footer>
         <div class="copywrite">
