--- a/portfolio/final/index.html
+++ b/portfolio/final/index.html
@@ -31,13 +31,13 @@
                 Graphic & UX/UI Design
             </div>
             <div class="right" id="right">
-                <div id="hamicon" onclick="HamburgerOpen();">&#9776;</div>
+                <div id="hamicon" tabindex= 1 onclick="HamburgerOpen();">&#9776;</div>
                 <div id="close" onclick="HamburgerClose();">X</div>
                 <div>
                     <nav id="nav">
-                        <a id=navLink1 class=active href="index.html" tabindex="1">Portfolio </a>
-                        <a id=navLink2 href="contact.html" tabindex=2>About </a>
-                        <a id=navLink3 href="contact.html#contactpage" tabindex=3>Contact </a>
+                        <a id=navLink1 class=active href="index.html" tabindex="2">Portfolio </a>
+                        <a id=navLink2 href="contact.html" tabindex=3>About </a>
+                        <a id=navLink3 href="contact.html#contactpage" tabindex=4>Contact </a>
                     </nav>
                 </div>
             </div>
