--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -53,7 +53,7 @@
                 <div class="banner">
                     <img id=b4 src="content/banner2-02.png" alt="Rebecca Skier (top)">
                         <div class="aboutparagraph"><strong class="intro">Hi, I'm Rebecca.</strong><br><br>
-                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>oppurtunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_blank">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre>
+                        <pre><span>My name is Rebecca Skier and I'm a 3rd<br>generation Syracuse University student.<br>I'm passionate about design and<br>experienced working with Adobe<br>softwares, specifically Illustrator. I am<br>always looking for new challenges and<br>opportunities to put my skills to use.<br><br><br><a href="../final/content/rskierresume.pdf" class="resumebutton" target="_blank">View Resume</a> <a href="#contactpage" class="contactbutton">Contact Me</a></span></pre>
                         </div>
                 </div>
             </div>
