--- a/portfolio/final/contact.html
+++ b/portfolio/final/contact.html
@@ -169,7 +169,7 @@
                                 <strong>Phone: </strong>201-696-6619<br>
                             </div>
                             <div class="infobox">
-                                <strong>Address: </strong>20 Briarcliff Road, New Jersey, 07458
+                                <strong>Address: </strong>20 Briarcliff Road, USR New Jersey, 07458
                             </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                 <p><strong>Phone:</strong><p>
                 <p>201-696-6619</p>
                 <p><strong>Address:</strong><p>
-                <p>20 Briarcliff Road,<br> New Jersey, 07458</p>
+                <p>20 Briarcliff Road,<br> USR New Jersey, 07458</p>
             </div>
         </div>
     </main>
