--- a/portfolio/final/index.html
+++ b/portfolio/final/index.html
@@ -48,10 +48,10 @@
     <main>
         <div class = row-5>
             <div class="left-5">
-                <img src="../../../../../Random/spoon 1 join.png" width="300" alt="Join Spoon graphic 1">
+                <img src="content/spoon 1 join.png" width="300" alt="Join Spoon graphic 1">
             </div>
             <div class="right-5">
-                <img src="../../../../../Random/join spoon 2-01.png" width="300" alt="Join Spoon graphic 2">
+                <img src="content/join spoon 2-01.png" width="300" alt="Join Spoon graphic 2">
             </div>
         </div>
         <div class="row4">
